// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apiHandler handleEvent lataaProjekti should load a new project from Velho 1`] = `
Object {
  "__typename": "Projekti",
  "kayttoOikeudet": Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "esitetaanKuulutuksessa": true,
      "kayttajatunnus": "A123",
      "nimi": "Projari, Pekka",
      "organisaatio": "Väylävirasto",
      "rooli": "PROJEKTIPAALLIKKO",
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "matti.meikalainen@vayla.fi",
      "kayttajatunnus": "A000111",
      "nimi": "Meikäläinen, Matti",
      "organisaatio": "ELY",
      "rooli": "OMISTAJA",
    },
  ],
  "muistiinpano": "Testiprojekti 1:n muistiinpano",
  "oid": "1",
  "tallennettu": false,
  "tyyppi": "TIE",
  "velho": Object {
    "__typename": "Velho",
    "nimi": "Testiprojekti 1",
    "tyyppi": "TIE",
  },
}
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 1`] = `
Array [
  "Initial state with projektipaallikko and omistaja",
  Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "esitetaanKuulutuksessa": true,
      "kayttajatunnus": "A123",
      "nimi": "Projari, Pekka",
      "organisaatio": "Väylävirasto",
      "rooli": "PROJEKTIPAALLIKKO",
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "matti.meikalainen@vayla.fi",
      "kayttajatunnus": "A000111",
      "nimi": "Meikäläinen, Matti",
      "organisaatio": "ELY",
      "rooli": "OMISTAJA",
    },
  ],
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 2`] = `
Array [
  "Create projekti having having both projektipaallikko and omistaja",
  Object {
    "kayttoOikeudet": Array [
      Object {
        "email": "pekka.projari@vayla.fi",
        "esitetaanKuulutuksessa": true,
        "kayttajatunnus": "A123",
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "rooli": "PROJEKTIPAALLIKKO",
      },
      Object {
        "email": "matti.meikalainen@vayla.fi",
        "esitetaanKuulutuksessa": undefined,
        "kayttajatunnus": "A000111",
        "nimi": "Meikäläinen, Matti",
        "organisaatio": "ELY",
        "puhelinnumero": "22",
        "rooli": "OMISTAJA",
      },
    ],
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "tallennettu": true,
    "velho": Object {
      "nimi": "Testiprojekti 1",
      "tyyppi": "TIE",
    },
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 3`] = `
Array [
  "Loaded projekti having having both projektipaallikko and omistaja",
  Object {
    "__typename": "Projekti",
    "kayttoOikeudet": Array [
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "pekka.projari@vayla.fi",
        "esitetaanKuulutuksessa": true,
        "kayttajatunnus": "A123",
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "rooli": "PROJEKTIPAALLIKKO",
      },
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "matti.meikalainen@vayla.fi",
        "esitetaanKuulutuksessa": undefined,
        "kayttajatunnus": "A000111",
        "nimi": "Meikäläinen, Matti",
        "organisaatio": "ELY",
        "puhelinnumero": "22",
        "rooli": "OMISTAJA",
      },
    ],
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "status": "EI_JULKAISTU",
    "tallennettu": true,
    "tyyppi": "TIE",
    "velho": Object {
      "__typename": "Velho",
      "nimi": "Testiprojekti 1",
      "tyyppi": "TIE",
    },
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 4`] = `
Array [
  "Save projekti having having only projektipaallikko",
  Object {
    "aloitusKuulutus": undefined,
    "euRahoitus": undefined,
    "kayttoOikeudet": Array [
      Object {
        "email": "pekka.projari@vayla.fi",
        "esitetaanKuulutuksessa": true,
        "kayttajatunnus": "A123",
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "rooli": "PROJEKTIPAALLIKKO",
      },
    ],
    "kielitiedot": undefined,
    "liittyvatSuunnitelmat": undefined,
    "muistiinpano": undefined,
    "oid": "1",
    "suunnitteluSopimus": undefined,
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 5`] = `
Array [
  "Loaded projekti having having only projektipaallikko",
  Object {
    "__typename": "Projekti",
    "kayttoOikeudet": Array [
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "pekka.projari@vayla.fi",
        "esitetaanKuulutuksessa": true,
        "kayttajatunnus": "A123",
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "rooli": "PROJEKTIPAALLIKKO",
      },
    ],
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "status": "EI_JULKAISTU",
    "tallennettu": true,
    "tyyppi": "TIE",
    "velho": Object {
      "__typename": "Velho",
      "nimi": "Testiprojekti 1",
      "tyyppi": "TIE",
    },
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 6`] = `
Array [
  "Save projekti having while adding omistaja back. There should be projektipaallikko and omistaja in the projekti now. Projektipaallikko cannot be removed, so it always stays there.",
  Object {
    "aloitusKuulutus": undefined,
    "euRahoitus": undefined,
    "kayttoOikeudet": Array [
      Object {
        "email": "pekka.projari@vayla.fi",
        "esitetaanKuulutuksessa": true,
        "kayttajatunnus": "A123",
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "rooli": "PROJEKTIPAALLIKKO",
      },
      Object {
        "email": "matti.meikalainen@vayla.fi",
        "esitetaanKuulutuksessa": undefined,
        "kayttajatunnus": "A000111",
        "nimi": "Meikäläinen, Matti",
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "rooli": "OMISTAJA",
      },
    ],
    "kielitiedot": undefined,
    "liittyvatSuunnitelmat": undefined,
    "muistiinpano": undefined,
    "oid": "1",
    "suunnitteluSopimus": undefined,
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 7`] = `
Array [
  "Loaded projekti having while adding omistaja back. There should be projektipaallikko and omistaja in the projekti now. Projektipaallikko cannot be removed, so it always stays there.",
  Object {
    "__typename": "Projekti",
    "kayttoOikeudet": Array [
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "pekka.projari@vayla.fi",
        "esitetaanKuulutuksessa": true,
        "kayttajatunnus": "A123",
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "rooli": "PROJEKTIPAALLIKKO",
      },
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "matti.meikalainen@vayla.fi",
        "esitetaanKuulutuksessa": undefined,
        "kayttajatunnus": "A000111",
        "nimi": "Meikäläinen, Matti",
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "rooli": "OMISTAJA",
      },
    ],
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "status": "EI_JULKAISTU",
    "tallennettu": true,
    "tyyppi": "TIE",
    "velho": Object {
      "__typename": "Velho",
      "nimi": "Testiprojekti 1",
      "tyyppi": "TIE",
    },
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 8`] = `
Array [
  "Save projekti having while adding one muokkaaja more. There should be three persons in the projekti now",
  Object {
    "aloitusKuulutus": Object {
      "elyKeskus": "Pirkanmaa",
      "esitettavatYhteystiedot": Array [
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
      "hankkeenKuvaus": "Lorem Ipsum",
      "hankkeenKuvausRuotsi": "På Svenska",
      "hankkeenKuvausSaame": "Saameksi",
      "kuulutusPaiva": "2022-01-02",
      "siirtyySuunnitteluVaiheeseen": "2022-01-01",
    },
    "euRahoitus": false,
    "kayttoOikeudet": Array [
      Object {
        "email": "pekka.projari@vayla.fi",
        "esitetaanKuulutuksessa": true,
        "kayttajatunnus": "A123",
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "rooli": "PROJEKTIPAALLIKKO",
      },
      Object {
        "email": "matti.meikalainen@vayla.fi",
        "esitetaanKuulutuksessa": undefined,
        "kayttajatunnus": "A000111",
        "nimi": "Meikäläinen, Matti",
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "rooli": "OMISTAJA",
      },
      Object {
        "email": "A2@vayla.fi",
        "esitetaanKuulutuksessa": undefined,
        "kayttajatunnus": "A2",
        "nimi": "SukunimiA2, EtunimiA2",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "123456789",
        "rooli": "OMISTAJA",
      },
    ],
    "kielitiedot": Object {
      "ensisijainenKieli": "SUOMI",
      "projektinNimiVieraskielella": "Projektin nimi saameksi",
      "toissijainenKieli": "SAAME",
    },
    "liittyvatSuunnitelmat": undefined,
    "muistiinpano": undefined,
    "oid": "1",
    "suunnitteluSopimus": null,
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 9`] = `
Array [
  "Loaded projekti having while adding one muokkaaja more. There should be three persons in the projekti now",
  Object {
    "__typename": "Projekti",
    "aloitusKuulutus": Object {
      "__typename": "AloitusKuulutus",
      "elyKeskus": "Pirkanmaa",
      "esitettavatYhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
      "hankkeenKuvaus": "Lorem Ipsum",
      "hankkeenKuvausRuotsi": "På Svenska",
      "hankkeenKuvausSaame": "Saameksi",
      "kuulutusPaiva": "2022-01-02",
      "siirtyySuunnitteluVaiheeseen": "2022-01-01",
    },
    "euRahoitus": false,
    "kayttoOikeudet": Array [
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "pekka.projari@vayla.fi",
        "esitetaanKuulutuksessa": true,
        "kayttajatunnus": "A123",
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "rooli": "PROJEKTIPAALLIKKO",
      },
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "matti.meikalainen@vayla.fi",
        "esitetaanKuulutuksessa": undefined,
        "kayttajatunnus": "A000111",
        "nimi": "Meikäläinen, Matti",
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "rooli": "OMISTAJA",
      },
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "A2@vayla.fi",
        "esitetaanKuulutuksessa": undefined,
        "kayttajatunnus": "A2",
        "nimi": "SukunimiA2, EtunimiA2",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "123456789",
        "rooli": "OMISTAJA",
      },
    ],
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
      "projektinNimiVieraskielella": "Projektin nimi saameksi",
      "toissijainenKieli": "SAAME",
    },
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "status": "ALOITUSKUULUTUS",
    "suunnitteluSopimus": null,
    "tallennettu": true,
    "tyyppi": "TIE",
    "velho": Object {
      "__typename": "Velho",
      "nimi": "Testiprojekti 1",
      "tyyppi": "TIE",
    },
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 10`] = `
Object {
  "__typename": "Projekti",
  "aloitusKuulutus": Object {
    "__typename": "AloitusKuulutus",
    "elyKeskus": "Pirkanmaa",
    "esitettavatYhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Marko",
        "organisaatio": "Kajaani",
        "puhelinnumero": "0293121213",
        "sahkoposti": "markku.koi@koi.com",
        "sukunimi": "Koi",
      },
    ],
    "hankkeenKuvaus": "Lorem Ipsum",
    "hankkeenKuvausRuotsi": "På Svenska",
    "hankkeenKuvausSaame": "Saameksi",
    "kuulutusPaiva": "2022-01-02",
    "palautusSyy": null,
    "siirtyySuunnitteluVaiheeseen": "2022-01-01",
  },
  "aloitusKuulutusJulkaisut": Array [
    Object {
      "__typename": "AloitusKuulutusJulkaisu",
      "aloituskuulutusIlmoitusPDFPath": "/yllapito/tiedostot/projekti/1/aloituskuulutus/ILMOITUS TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA Testiprojekti 1.pdf",
      "aloituskuulutusIlmoitusPDFPathRuotsi": undefined,
      "aloituskuulutusIlmoitusPDFPathSaame": "/yllapito/tiedostot/projekti/1/aloituskuulutus/ILMOITUS TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA Projektin nimi saameksi.pdf",
      "aloituskuulutusPDFPath": "/yllapito/tiedostot/projekti/1/aloituskuulutus/KUULUTUS SUUNNITTELUN ALOITTAMISESTA Testiprojekti 1.pdf",
      "aloituskuulutusPDFPathRuotsi": undefined,
      "aloituskuulutusPDFPathSaame": "/yllapito/tiedostot/projekti/1/aloituskuulutus/KUULUTUS SUUNNITTELUN ALOITTAMISESTA Projektin nimi saameksi.pdf",
      "elyKeskus": "Pirkanmaa",
      "hankkeenKuvaus": "Lorem Ipsum",
      "hankkeenKuvausRuotsi": "På Svenska",
      "hankkeenKuvausSaame": "Saameksi",
      "hyvaksyja": "A123",
      "id": 1,
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Projektin nimi saameksi",
        "toissijainenKieli": "SAAME",
      },
      "kuulutusPaiva": "2022-01-02",
      "muokkaaja": "A123",
      "siirtyySuunnitteluVaiheeseen": "2022-01-01",
      "suunnitteluSopimus": null,
      "tila": "HYVAKSYTTY",
      "velho": Object {
        "__typename": "Velho",
        "kunnat": undefined,
        "nimi": "Testiprojekti 1",
        "tilaajaOrganisaatio": undefined,
        "tyyppi": "TIE",
        "vaylamuoto": undefined,
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Pekka",
          "organisaatio": "Väylävirasto",
          "puhelinnumero": "11",
          "sahkoposti": "pekka.projari@vayla.fi",
          "sukunimi": "Projari",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
  ],
  "euRahoitus": false,
  "kayttoOikeudet": Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "esitetaanKuulutuksessa": true,
      "kayttajatunnus": "A123",
      "nimi": "Projari, Pekka",
      "organisaatio": "Väylävirasto",
      "puhelinnumero": "11",
      "rooli": "PROJEKTIPAALLIKKO",
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "matti.meikalainen@vayla.fi",
      "esitetaanKuulutuksessa": undefined,
      "kayttajatunnus": "A000111",
      "nimi": "Meikäläinen, Matti",
      "organisaatio": "ELY",
      "puhelinnumero": "123456789",
      "rooli": "OMISTAJA",
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "A2@vayla.fi",
      "esitetaanKuulutuksessa": undefined,
      "kayttajatunnus": "A2",
      "nimi": "SukunimiA2, EtunimiA2",
      "organisaatio": "Väylävirasto",
      "puhelinnumero": "123456789",
      "rooli": "OMISTAJA",
    },
  ],
  "kielitiedot": Object {
    "__typename": "Kielitiedot",
    "ensisijainenKieli": "SUOMI",
    "projektinNimiVieraskielella": "Projektin nimi saameksi",
    "toissijainenKieli": "SAAME",
  },
  "muistiinpano": "Testiprojekti 1:n muistiinpano",
  "oid": "1",
  "status": "ALOITUSKUULUTUS",
  "suunnitteluSopimus": null,
  "tallennettu": true,
  "tyyppi": "TIE",
  "velho": Object {
    "__typename": "Velho",
    "nimi": "Testiprojekti 1",
    "tyyppi": "TIE",
  },
}
`;
